# planzy

./: .env.example  .gitignore  README.md  convert-perbug-pngs.sh  convert-perbug-svgs.sh  deploy_app_perbug.sh  deploy_telegram_perbug_bot.sh  perbug_split_verification_report.md  setup_eatdoge_ssl.sh  split_perbug_assassin_nfts.sh  split_perbug_caster_nfts.sh  split_perbug_cleric_nfts.sh  split_perbug_encounter_cards.sh  split_perbug_engineer_nfts.sh  split_perbug_icons.sh  split_perbug_material_nfts.sh  split_perbug_node_tiles.sh  split_perbug_portraits.sh  split_perbug_relics.sh  split_perbug_resources.sh  split_perbug_scout_nfts.sh  split_perbug_support_nfts.sh  split_perbug_tank_nfts.sh  split_perbug_token_family.sh  split_perbug_warrior_nfts.sh
app/: .env.dev  .env.prod  .env.stage  DEV_NOTES.md  FRONTEND_AUDIT.md  README.md  pubspec.yaml
app/android/: key.properties.example
app/docs/: design_system.md  game_world_asset_pipeline.md  map_geo_discovery_architecture.md  perbug_custom_rendering_engine_foundation.md  (+4 more)
backend/: DEV_NOTES.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
docs/: perbug-creator-rewards.md  perbug_chain_wallet_architecture_2026-03-30.md  perbug_custom_earth_map_architecture.md  perbug_repo_audit_2026-03-29.md  telegram_perbug_bot_setup.md
eatdoge/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
generated_assets/: manifest.json
generated_assets_cleaned/: cleanup_report.csv  cleanup_report.json
generated_assets_cleaned_very_strict/: cleanup_report.csv  cleanup_report.json
geo/: README.md
perbug-rust/: .env.example  .gitignore  Cargo.toml  README.md  clippy.toml
perbug-rust/crates/perbug-common/: Cargo.toml
perbug-rust/crates/perbug-common/src/: amount.rs  constants.rs  error.rs  events.rs  lib.rs  pda.rs  types.rs
perbug-rust/crates/perbug-rewards-program/: Cargo.toml
perbug-rust/crates/perbug-rewards-program/src/: error.rs  events.rs  instruction.rs  pda.rs  processor.rs  state.rs  validation.rs
perbug-rust/crates/perbug-rewards-program/tests/: basic.rs  claim_flow.rs  duplicate_claim.rs
perbug-rust/crates/perbug-tipping-program/: Cargo.toml
perbug-rust/crates/perbug-tipping-program/src/: entrypoint.rs  error.rs  events.rs  instruction.rs  lib.rs  pda.rs  processor.rs  state.rs  validation.rs
perbug-rust/crates/perbug-tipping-program/tests/: basic.rs  fee_split.rs  tip_flow.rs
perbug-rust/crates/perbug-token-cli/: Cargo.toml
perbug-rust/crates/perbug-token-cli/src/: config.rs  main.rs
perbug-rust/crates/perbug-token-cli/src/commands/: create_ata.rs  create_mint.rs  inspect.rs  mint_to.rs  mod.rs  treasury.rs
perbug-rust/docs/: architecture.md  deployment.md  local-dev.md  security.md  token-model.md
perbug-rust/scripts/: build_all.sh  devnet_create_mint.sh  devnet_create_token_accounts.sh  devnet_fund_treasury.sh  devnet_mint_initial_supply.sh  fmt.sh  lint.sh  test_all.sh
scripts/: clean_disconnected_asset_pieces.py  clean_disconnected_asset_pieces.sh  flutter_reset.sh  perbug_splitter.py  rename_and_process_random_pngs.sh  split_all_perbug_assets.sh  web_build.sh  web_dev.sh
web/: .env.example  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs
(+1180 files in other folders)
