[workspace]
members = [
  "crates/perbug-common",
  "crates/perbug-token-cli",
  "crates/perbug-rewards-program",
  "crates/perbug-tipping-program",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["OpenAI Codex"]
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0"
borsh = { version = "1.5", features = ["derive"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
solana-program = "2.1"
solana-sdk = "2.1"
solana-rpc-client = "2.1"
spl-token = "7.0"
spl-token-2022 = "6.0"
spl-associated-token-account = "6.0"
base64 = "0.22"
hex = "0.4"
envy = "0.4"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.dev]
overflow-checks = true

