[package]
name = "perbug-common"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
borsh.workspace = true
serde.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-token-2022.workspace = true
thiserror.workspace = true
