[package]
name = "perbug-token-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
envy.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-rpc-client.workspace = true
solana-sdk.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true
spl-token-2022.workspace = true
perbug-common = { path = "../perbug-common" }
